Added JPMS module files
* Netty does not have module-info.java files, so expected to be on the classpath